# webcam-pix2pix-tensorflow

./: gui.py  params.py  pyproject.toml  webcam-pix2pix.py
msa/: predictor.py
