[tool.poetry]
name = "webcam-pix2pix-tensorflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyside6 = "^6.4.2"
numpy = "^1.24.1"
pyqtgraph = "^0.13.1"
pyqt6 = "^6.4.1"
opencv-python = "^4.7.0.68"
tensorflow-macos = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
